--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,15 @@
 # Configurations
-title:            Jekyll Gitbook
-longtitle:        Jekyll Gitbook
-author:           HE Tao
-email:            sighingnow@gmail.com
+title:            pclnxt Jekyll Gitbook
+longtitle:        pclnxt Jekyll Gitbook
+author:           pclnxt 
+email:            
 description: >
-  Build Jekyll site with the GitBook style.
+  Jekyll site with the GitBook style.
 
 version:          1.0
 gitbook_version:  3.2.3
 
-url:              'https://sighingnow.github.io'
+url:              'https://pclnxt.github.io'
 baseurl:          '/jekyll-gitbook'
 rss:              RSS
 
