--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Configurations
-title:            pclnxt Jekyll Gitbook
-longtitle:        pclnxt Jekyll Gitbook
+title:            pclnxt title
+longtitle:        pclnxt long title
 author:           pclnxt 
 email:            
 description: >
