--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Configurations
 title:            pclnxt title
-longtitle:        pclnxt long title
+longtitle:        어서와 황혼은 처음이지?
 author:           pclnxt 
 email:            
 description: >
