--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Configurations
-title:            pclnxt title
+title:            어서와 황혼은 처음이지?
 longtitle:        어서와 황혼은 처음이지?
 author:           pclnxt 
 email:            
